# sma-bluetooth-cpp

./: .clang-format  CMakeLists.txt  Makefile  README.md  almanac.c  almanac.cpp  almanac.h  bt_connection.cpp  bt_connection.h  repost.c  repost.cpp  repost.h  sb_commands.c  sb_commands.cpp  sb_commands.h  sma_mysql.cpp  sma_mysql.h  sma_struct.h  smatool.c  smatool.cpp  smatool.h  smatool.xml  stream_handling.h
.github/workflows/: test-clang-format.yml
